--- a/VikingBros/MainWindow.xaml
+++ b/VikingBros/MainWindow.xaml
@@ -19,7 +19,7 @@
 		<ProgressBar x:Name="ProgressPatch" HorizontalAlignment="Left" Height="10" Margin="44,388,0,0" VerticalAlignment="Top" Width="534" Grid.ColumnSpan="2" Value="{Binding FilesProcessed}" Maximum="{Binding NumberTotalFiles}"/>
 		<Button x:Name="ButtonWiki" Content="Wiki" HorizontalAlignment="Left" Margin="152,297,0,0" VerticalAlignment="Top" Width="87" Grid.Column="1" Height="20" Click="ButtonWiki_Click" Background="#FFB7A6B4"/>
 		<Label x:Name="LabelPatchInfo" Content="{Binding CurrentMessage, Mode=OneWay, NotifyOnTargetUpdated=True}"  HorizontalAlignment="Left" Height="32" Margin="44,351,0,0" VerticalAlignment="Top" Width="534" Background="#1a1c20" Opacity=".8" Foreground="#797980" Grid.ColumnSpan="2"/>
-		<Button x:Name="ButtonFiles" Grid.Column="1" Content="Optional Mods" HorizontalAlignment="Left" Margin="152,265,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.923,-0.391" Width="87" Click="ButtonFiles_Click" Height="20" Background="#FFB7A6B4"/>
+		<Button x:Name="ButtonFiles" Grid.Column="1" Content="Optional Mods" HorizontalAlignment="Left" Margin="152,265,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.923,-0.391" Width="87" Click="ButtonFiles_Click" Height="20" Background="#FFB7A6B4" ToolTipService.ToolTip = "Place Approved Optional Mods in this Directory"/>
 		<Image Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="186" Margin="431,-2,0,0" VerticalAlignment="Top" Width="365"  Source="/Logo1_with_Text_Purple.png">
 		</Image>
 		<WebBrowser x:Name="MOTDWIndow" HorizontalAlignment="Left" Height="336" Margin="44,10,0,0" VerticalAlignment="Top" Width="395" Source="https://ahunter3.firstcloudit.com/updates.html"/>
